--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node CI
+name: CI/CD
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
+        node-version: v16.13.1
+    - run: npm install
+    - run: npx update-browserslist-db@latest
     - run: CI='' npm run build --if-present
-    - run: npm test
