package.json & workflow

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gravity-bridge-dapp",
   "version": "0.0.1",
-  "homepage": "https://chalabi2.github.io/space-station",
   "private": true,
   "dependencies": {
     "@cosmjs/launchpad": "^0.26.5",
@@ -57,8 +56,9 @@
     "start": "REACT_APP_GA=G-VEG6QT20YL react-scripts start",
     "build": "REACT_APP_GA=G-VEG6QT20YL react-scripts build",
     "test": "react-scripts test --passWithNoTests",
-    "eject": "react-scripts eject"
-    
+    "eject": "react-scripts eject",
+    "deploy:testnet": "yarn run build && aws s3 sync --cache-control max-age=0,public ./build/ s3://gb-eth",
+    "deploy:prod": "REACT_APP_GA=G-VEG6QT20YL yarn run build && aws s3 sync --cache-control max-age=0,public ./build/ s3://spacestation.zone && aws cloudfront create-invalidation --distribution-id ESRVODSMBBH8C --paths '/*'"
   },
   "eslintConfig": {
     "extends": [
