--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,19 +1,29 @@
-name: Deploy React Application
+# Action to deploy Gravity Bridge app on push
+name: Deploy Gravity Bridge App
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Runs on pushes targeting the default branch
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  build_test:
-    # The type of runner that the job will run on
+  # Build job
+  build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [16] # We will deploy with only one version of node  
@@ -30,10 +40,21 @@ jobs:
         run: |
           npm ci
           CI='' npm run build --if-present
-          npm test      
-      - name: deploy to gh-pages
-        uses: JamesIves/github-pages-deploy-action@v4
+          npm test  
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          folder : build
-          branch: gh-pages
+          # Upload entire repository
+          path: './build'
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
