--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gravity-bridge-dapp",
   "version": "0.0.1",
+  "homepage": "https://chalabi2.github.io/space-station/",
   "private": true,
   "dependencies": {
     "@cosmjs/launchpad": "^0.26.5",
