--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Space Station",
+  "short_name": "Gravity Bridge app",
   "name": "Interchain Bridge Station",
   "icons": [
     {
