--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "REACT_APP_GA=G-VEG6QT20YL react-scripts start",
     "build": "REACT_APP_GA=G-VEG6QT20YL react-scripts build",
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
