--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gravity-bridge-dapp",
   "version": "0.0.1",
-  "homepage": "https://chandrastation.github.io/space-station/",
+  "homepage": "https://<your_github_username>.github.io/space-station/",
   "private": true,
   "dependencies": {
     "@cosmjs/launchpad": "^0.26.5",
